--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -38,6 +38,12 @@ gem 'faker', '~> 1.8', '>= 1.8.7'
 gem 'will_paginate', '~> 3.1', '>= 3.1.6'
 gem 'bootstrap-will_paginate', '~> 1.0'
 
+gem 'carrierwave', '~> 1.2', '>= 1.2.2'
+
+gem 'mini_magick', '~> 4.8'
+# The Ruby cloud services library.
+gem 'fog', '~> 1.42'
+
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
